<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/docBlue"
    tools:context=".RegisterActivity"
    android:backgroundTint="@color/docLightB">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/docLBlack"
        app:cardElevation="25dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15">

                <TextView
                    android:id="@+id/haSplashText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/homemade_apple"
                    android:text="@string/half_name"
                    android:textColor="@color/docWhite"
                    android:textSize="45sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.30" />

                <TextView
                    android:id="@+id/lfSplashText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/thalf_name"
                    android:textColor="@color/docWhite"
                    android:textSize="45sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/haSplashText"
                    app:layout_constraintTop_toTopOf="@+id/haSplashText" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itMail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/mailHint"
                app:errorEnabled="true"
                app:hintTextColor="@color/white"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itMob"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="25dp"
                android:hint="@string/phoneHint"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itMail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/regButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/docContrast"
                android:text="@string/signUp"
                android:textColor="@color/docWhite"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTxt" />

            <TextView
                android:id="@+id/textView5"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyUser"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/itMob"
                app:layout_constraintTop_toBottomOf="@+id/itMob" />

            <TextView
                android:id="@+id/loginTxt"
                android:textColor="@color/docContrast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/itMob" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>