<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/docBlue"
    tools:context=".BoardThree">
    <TextView
        android:id="@+id/tNextBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textColor="@color/docWhite"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView5"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lottieAnimationView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/presc" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView4"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimationView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/scan_presc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/boardThreeDesc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView4"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView5"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/docContrast"
        android:text="@string/getStarted"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:textAllCaps="false"
        android:textColor="@color/docWhite"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>