<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="2.5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/presNameT"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presNameHolder"
                android:textColor="@color/docLBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/presName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presNameHolder"
                android:textColor="@color/docLBlack"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/precByT"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/precByT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prescByHolder"
                android:textColor="@color/docLBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/presNameT"
                app:layout_constraintTop_toBottomOf="@+id/presNameT"/>

            <TextView
                android:id="@+id/precBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prescByHolder"
                android:textColor="@color/docLBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/precByT"
                app:layout_constraintStart_toStartOf="@+id/presName" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <TextView
                android:id="@+id/intervals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intervalHolder"
                android:textColor="@color/docLBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notifyImv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/notify"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveOffline"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/saveOffline"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/saveoff"
                android:layout_marginStart="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/docLBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>